fixed a badly done slides layout (by me) + better readabilty for paragraphs in lecturer comments

--- a/Slides/static/css/custom-slides.css
+++ b/Slides/static/css/custom-slides.css
@@ -94,8 +94,6 @@ a.btn-next[href=''],a.btn-prev[href='']{
 
 
 .lecturer_note {
-	width:42%;
-	margin-left:58%;
 	padding:6px;
 	border-radius:3px;
 }
